<resources>
    <string name="app_name">AddressBook</string>
    <string name="action_settings">Settings</string>
    <string name="search_text">Search</string>
    <string name="add_text">Add</string>
    <string name="delete_db_text">Delete DB</string>
    <string name="add_edit_activity_sav_button">Save</string>
    <string name="add_edit_activity_name_hint">Name</string>
    <string name="add_edit_activity_email_hint">Email</string>
    <string name="add_edit_activity_phone_hint">Phone</string>
    <string name="add_edit_activity_address_hint">Address</string>
    <string name="search_input_hint">Enter contact</string>
    <string name="search_button">Search</string>
    <string name="add_contact_titile">Add Contact</string>
    <string name="edit_contact_text">Edit Contact</string>
    <string name="search_contatc_totle">Search contact</string>
</resources>
