<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.squirrel.addressbook.MainActivity">
    <item
        android:icon="@drawable/search"
        android:id="@+id/search_item"
        app:showAsAction="always"
        android:orderInCategory="10"
        android:title="@string/search_text"
        tools:ignore="AppCompatResource"/>

    <item
        android:icon="@drawable/add"
        android:id="@+id/add_item"
        app:showAsAction="always"
        android:orderInCategory="100"
        android:title="@string/add_text"
        tools:ignore="AppCompatResource"/>

    <item
        android:id="@+id/delete_item"
        app:showAsAction="never"
        android:orderInCategory="50"
        android:title="@string/delete_db_text"
        tools:ignore="AppCompatResource"/>

</menu>
