<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background_basic"
              android:orientation="vertical"
              android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/add_edit_activity_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/contact_name"
            android:hint="@string/add_edit_activity_name_hint"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/add_edit_activity_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_edit_activity_email_hint"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/add_edit_activity_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_edit_activity_phone_hint"
            android:inputType="phone"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/add_edit_activity_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_edit_activity_address_hint"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/add_edit_activity_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/textColorPrimary"
        android:clickable="true"
        android:text="@string/add_edit_activity_sav_button"/>

</LinearLayout>